@@ -1,5 +1,5 @@
 /*
- * $Id: hbrdddbf.h,v 1.29 2006/06/27 21:26:00 druzus Exp $
+ * $Id: hbrdddbf.h,v 1.30 2006/08/19 11:22:28 druzus Exp $
  */
 
 /*
@@ -340,7 +340,7 @@ extern HB_EXPORT BOOL    hb_dbfLockIdxFile( FHANDLE hFile, BYTE bScheme, USHORT 
 extern HB_EXPORT BOOL    hb_dbfLockIdxGetData( BYTE bScheme, HB_FOFFSET *ulPos, HB_FOFFSET *ulPool );
 
 #ifndef HB_CDP_SUPPORT_OFF
-extern void hb_dbfTranslateRec( DBFAREAP pArea, BYTE * pBuffer, PHB_CODEPAGE cdp_src, PHB_CODEPAGE cdp_dest );
+extern HB_EXPORT void hb_dbfTranslateRec( DBFAREAP pArea, BYTE * pBuffer, PHB_CODEPAGE cdp_src, PHB_CODEPAGE cdp_dest );
 #endif
 
 HB_EXTERN_END
